nova (2012.1~e4~20120217.12709-0ubuntu2) UNRELEASED; urgency=low

  [ Monty Taylor ]
  * Move files from nova/locale to /usr/share/locale

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 17 Feb 2012 22:11:28 -0500

nova (2012.1~e4~20120217.12709-0ubuntu1) precise; urgency=low

  [ Dave Walker (Daviey) ]
  * New upstream snapshot
  * debian/patches/temp_fix_linux_net.patch:
    - Dropped, applied upstream. LP: #929127
  * debian/patches/libvirt-use-console-pipe.patch:
    - Rebased against latest trunk

  [ Chuck Short ]
  * debian/nova.conf: Re-enable default iscsi_helper.
  * debian/nova.conf: More fixups.
  * debian/control: Dont depend and conflicts on nova-compute-
    hypervisor. (LP: #923681)
  * debian/patches/libvirt-us-console-pipe.patch: Refreshed.
  * Temporarily disable console patch. (LP: #932787)
  * New usptream version.

 -- Chuck Short <zulcss@ubuntu.com> Fri, 17 Feb 2012 11:02:12 -0500

nova (2012.1~e4~20120210.12574-0ubuntu1) precise; urgency=low

  [Chuck Short]
  * New upstream release.
  * debian/patches/nova-manage_flagfile_location.patch:
    Refreshed patch. 
  * debian/patches/libvirt-use-console-pipe.patch:
    Re-add from oneiric.  
  * Dropped debian/patches/packaged-ajaxterm-calls.patch. 
  * debian/control:
    - Dropped recommends on ajaxterm for nova-compute
    - Dropped nova-ajaxterm package.
  
  [Adam Gandleman]
  * debian/patches/temp_fix_linux_net.patch: Temporary patch until LP:
   929127 is resolved.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 10 Feb 2012 11:25:38 -0500

nova (2012.1~e4~20120208.12523-0ubuntu1) UNRELEASED; urgency=low

  [ Chuck Short ]
  * debian/patches/fix-nova-rootwraper-env.patch: Dropped
    no longer needed.
  * debian/nova-compute-{kvm,xen,uml,lxc}.conf: Add the connection
    type "--connection=libvirt" since libvirt is no longer the default.

  [ Adam Gandelman ]
  * debian/nova.conf: Define connection_type=libvirt in common nova.conf
    instead of nova-compute-*.conf until Bug #921294 is addressed.
