@@ -3,9 +3,11 @@
 # Verbose mode
 #export DH_VERBOSE=1
 
+include /usr/share/python/python.mk
+
 PACKAGE_NAME=python-nova
-PACKAGE_DIR=$(CURDIR)/debian/$(PACKAGE_NAME)
-SITE_PACKAGES_DIR=$(PACKAGE_DIR)$(call py_libdir,$(shell pyversions -d))
+debroot = debian/tmp
+site_packages_dir=$(debroot)$(call py_libdir,$(shell pyversions -d))
 
 # Lucid does not have dh_python2, but we would like to be able to use this
 # rules file to build on lucid as well. Thus the branching logic.
@@ -56,20 +58,15 @@ get-orig-source-git:
 			--prefix=$(DEBIAN_NAME)-$(DEBIAN_VERSION)/
 
 
-override_dh_install:
-	dh_install
-	set -e; \
-	for lang in `find $(SITE_PACKAGES_DIR)/nova/locale\
-		-maxdepth 1 -mindepth 1 -type d -printf "%f "`;\
-	do\
-		mkdir -p $(PACKAGE_DIR)/usr/share/locale/$$lang/LC_MESSAGES;\
-		mv $(SITE_PACKAGES_DIR)/nova/locale/$$lang/LC_MESSAGES/nova.mo\
-		   $(PACKAGE_DIR)/usr/share/locale/$$lang/LC_MESSAGES;\
-		rm -rf $(SITE_PACKAGES_DIR)/nova/locale/$$lang;\
-	done
-	rm -f $(SITE_PACKAGES_DIR)/nova/locale/nova.pot
+override_dh_auto_install:
+	# python-nova
+	python setup.py install -f --install-layout=deb --root=$(debroot)
+	mkdir -p $(debroot)/usr/share
+	mv $(site_packages_dir)/nova/locale $(debroot)/usr/share
+	mkdir -p $(debroot)/usr/share/apport/package-hooks
 
-	chmod 440 $(CURDIR)/debian/nova-common/etc/sudoers.d/nova_sudoers
+	# nova-common
+	install -D -m 440 $(CURDIR)/debian/nova_sudoers $(CURDIR)/debian/nova-common/etc/sudoers.d/nova_sudoers
 	install -D -m 0664 $(CURDIR)/debian/nova-volume.default	$(CURDIR)/debian/nova-volume/etc/default/nova-volume
 	for hypervisor in qemu kvm xen uml lxc; do \
 		install -D -m 0600 $(CURDIR)/debian/nova-compute-$${hypervisor}.conf $(CURDIR)/debian/nova-compute-$${hypervisor}/etc/nova/nova-compute.conf; \
